--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
-* linguist-documentation=true
+*.kicad_pcb linguist-detectable=true
+*.sch linguist-detectable=true
+*.pro linguist-detectable=false
+documents/* linguist-documentation
+pictures/* linguist-documentation
